bk_ida/gccida/g1/extract_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2553:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2557:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v1 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2558:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2559:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2560:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2561:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_dups = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2591:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2593:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2593:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2598:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2599:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2600:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.constraints, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2601:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_mode); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2604:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v8 = recog_data_0.constraints[0]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2605:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2606:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = *recog_data_0.constraints[0]; *v8; i = *v8 ) 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2609:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives += i == 44; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2619:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2148, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/recog.c:2619:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2148, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_insn/src/obj/recog.o] Error 1
